--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <main>
         <H1>Penny Flip Game</H1>
+        <div><img id="penny-image" src="assets/images/penny-heads.jpg" alt="penny image" width="300px" height="300px"></div>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div class="controls"><button id="flip">Flip The Penny!</button><button id="clear">Clear Scoreboard</button></div>
+            <div class="message-container">
+                <h3 id="message">hello</h3>
+            </div>
+            
             <hr>
             <div>
                 <h2>Scoreboard</h2>
